--- a/SickMoves/src/main/res/layout/activity_main.xml
+++ b/SickMoves/src/main/res/layout/activity_main.xml
@@ -16,28 +16,51 @@
 
         </LinearLayout>
 
+        <ImageView android:id="@+id/red"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="#FF0000"/>
 
-        <LinearLayout android:id="@+id/mapLayout"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView android:id="@+id/blue"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="#0000FF"
+            android:layout_alignParentRight="true"/>
 
-        </LinearLayout>
+        <ImageView android:id="@+id/green"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="#00FF00"
+            android:layout_alignParentBottom="true"/>
 
-        <LinearLayout android:id="@+id/menuLayout"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView android:id="@+id/yellow"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="#FFFF00"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+        <!--<LinearLayout android:id="@+id/mapLayout"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <!--</LinearLayout>-->
 
-        </LinearLayout>
+        <!--<LinearLayout android:id="@+id/menuLayout"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"/>-->
+
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content" />-->
+
+        <!--</LinearLayout>-->
 
     </RelativeLayout>
 
