--- a/SickMoves/src/main/res/layout/activity_main.xml
+++ b/SickMoves/src/main/res/layout/activity_main.xml
@@ -1,53 +1,37 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- The main content view -->
-    <RelativeLayout android:id="@+id/content_frame"
+    <LinearLayout android:id="@+id/gameLayout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout android:id="@+id/gameLayout"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </LinearLayout>
-
-        <ImageView android:id="@+id/red"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/b1"/>
-
-        <ImageView android:id="@+id/blue"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/b4"
-            android:layout_alignParentRight="true"/>
-
-        <ImageView android:id="@+id/green"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/b2"
-            android:layout_alignParentBottom="true"/>
-
-        <ImageView android:id="@+id/yellow"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/b3"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
-
-    <!-- The navigation drawer -->
-    <LinearLayout android:id="@+id/left_drawer"
-        android:orientation="vertical"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111">
-
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+
+    <ImageView android:id="@+id/red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/b1"/>
+
+    <ImageView android:id="@+id/blue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/b4"
+        android:layout_alignParentRight="true"/>
+
+    <ImageView android:id="@+id/green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/b2"
+        android:layout_alignParentBottom="true"/>
+
+    <ImageView android:id="@+id/yellow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/b3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+
+</RelativeLayout>
