--- a/SickMoves/src/main/res/layout/menu_layout.xml
+++ b/SickMoves/src/main/res/layout/menu_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical">
 
@@ -12,11 +12,10 @@
         android:layout_gravity="center"
         android:padding="24dp"/>
 
-    <Button android:id="@+id/playButton"
+    <ImageView android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PLAY"
-        android:textSize="24sp"
+        android:src="@drawable/play"
         android:layout_gravity="center"
         android:gravity="center"
         android:padding="24dp"/>
