--- a/SickMoves/src/main/res/layout/activity_main.xml
+++ b/SickMoves/src/main/res/layout/activity_main.xml
@@ -18,27 +18,54 @@
         android:layout_centerHorizontal="true"
         android:padding="24dp"/>
 
-    <ImageView android:id="@+id/red"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/b1"/>
 
-    <ImageView android:id="@+id/blue"
+    <TextView android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/b4"
+        android:text="15 * 23 = ?"
+        android:textSize="32sp"
+        android:textColor="@android:color/white"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:padding="24dp"/>
+
+    <TextView android:id="@+id/red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="233"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/b1"/>
+
+    <TextView android:id="@+id/blue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/b4"
+        android:text="233"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
         android:layout_alignParentRight="true"/>
 
-    <ImageView android:id="@+id/green"
+    <TextView android:id="@+id/green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/b2"
+        android:background="@drawable/b2"
+        android:text="233"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"/>
 
-    <ImageView android:id="@+id/yellow"
+    <TextView android:id="@+id/yellow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/b3"
+        android:background="@drawable/b3"
+        android:text="233"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@android:color/black"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 
